--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
@@ -227,16 +227,15 @@
                                             </constraints>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fm6-UV-UE2">
-                                            <rect key="frame" x="299" y="22" width="70" height="24"/>
+                                            <rect key="frame" x="281" y="22" width="88" height="24"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="24" id="6u7-dK-29T"/>
-                                                <constraint firstAttribute="width" constant="70" id="uUe-Od-ACw"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <state key="normal" title="CNY钱包">
+                                            <state key="normal" title="  切换CNY钱包  ">
                                                 <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
-                                            <state key="selected" title="USDT钱包"/>
+                                            <state key="selected" title="  切换USDT钱包  "/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                     <integer key="value" value="12"/>
