--- a/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
@@ -44,13 +44,16 @@
                     <rect key="frame" x="0.0" y="310" width="414" height="586"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="大奖公告：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0q-dW-eM5">
-                            <rect key="frame" x="22" y="40" width="61.5" height="14.5"/>
+                            <rect key="frame" x="22" y="40" width="61.5" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="chM-z5-K8z"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QtP-6Z-Za5">
-                            <rect key="frame" x="22" y="64.5" width="370" height="40"/>
+                            <rect key="frame" x="22" y="70" width="370" height="40"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本月进度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZ9-I3-5lb">
                                     <rect key="frame" x="20" y="11.5" width="57.5" height="17"/>
@@ -75,7 +78,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dZ-SF-rUk">
-                            <rect key="frame" x="22" y="104.5" width="370" height="175"/>
+                            <rect key="frame" x="22" y="110" width="370" height="175"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本月流水: 120,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J80-p6-w6w">
                                     <rect key="frame" x="20" y="20" width="103.5" height="14.5"/>
@@ -383,7 +386,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eym-Sh-0bT">
-                            <rect key="frame" x="22" y="288.5" width="180.5" height="67"/>
+                            <rect key="frame" x="22" y="294" width="180.5" height="67"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="轮盘" translatesAutoresizingMaskIntoConstraints="NO" id="jfq-jr-cRI">
                                     <rect key="frame" x="0.0" y="0.0" width="67" height="67"/>
@@ -427,7 +430,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zBF-yF-ycI">
-                            <rect key="frame" x="211.5" y="288.5" width="180.5" height="67"/>
+                            <rect key="frame" x="211.5" y="294" width="180.5" height="67"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="身份" translatesAutoresizingMaskIntoConstraints="NO" id="jgF-vP-sum">
                                     <rect key="frame" x="0.0" y="0.0" width="67" height="67"/>
