--- a/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
@@ -28,6 +28,7 @@
                 <outlet property="lblNextLevelDeposit" destination="gfV-5u-9we" id="zZY-KZ-Xop"/>
                 <outlet property="lblThisMonthAmount" destination="J80-p6-w6w" id="b3L-wR-1xf"/>
                 <outlet property="lblThisMonthDeposit" destination="U5U-Iu-Rhg" id="dyj-tB-3Ju"/>
+                <outlet property="pageControl" destination="497-AQ-Mjs" id="yWU-YE-3gh"/>
                 <outlet property="prgsViewAmount" destination="Mh3-dw-OQt" id="E3W-nX-fzO"/>
                 <outlet property="prgsViewDeposit" destination="UAH-s3-R0T" id="f7h-Em-01d"/>
                 <outlet property="sxhTopLb" destination="5cn-6c-4LY" id="VQO-el-ukp"/>
@@ -497,6 +498,7 @@
                     <subviews>
                         <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="6" translatesAutoresizingMaskIntoConstraints="NO" id="497-AQ-Mjs">
                             <rect key="frame" x="22" y="226" width="87" height="37"/>
+                            <color key="currentPageIndicatorTintColor" red="0.97254901960784312" green="0.93333333333333335" blue="0.67450980392156867" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                         </pageControl>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yca-Ns-xyA">
                             <rect key="frame" x="335" y="234.5" width="57" height="20"/>
@@ -540,16 +542,20 @@
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g2w-Lu-VqX">
                     <rect key="frame" x="0.0" y="102" width="414" height="163.5"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="g2w-Lu-VqX" secondAttribute="height" multiplier="375:148" id="sAQ-KH-6uX"/>
                     </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kwp-uN-exl">
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kwp-uN-exl">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="ScV-4w-Fgf"/>
+                        <outlet property="delegate" destination="-1" id="Zi0-dZ-F0V"/>
+                    </connections>
                 </collectionView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="位图备份" translatesAutoresizingMaskIntoConstraints="NO" id="GEL-g5-FzK">
                     <rect key="frame" x="0.0" y="44" width="414" height="25.5"/>
@@ -557,8 +563,8 @@
                         <constraint firstAttribute="width" secondItem="GEL-g5-FzK" secondAttribute="height" multiplier="375:23" id="rRp-05-Z9n"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIP私享会2.0 &gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cn-6c-4LY">
-                    <rect key="frame" x="22.5" y="77" width="99" height="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIP私享会2.0  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cn-6c-4LY">
+                    <rect key="frame" x="22.5" y="77" width="93.5" height="17"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -576,7 +582,7 @@
                         <action selector="didTapDashenBoard:" destination="-1" eventType="touchUpInside" id="0Sd-Ic-Rc9"/>
                     </connections>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 4" translatesAutoresizingMaskIntoConstraints="NO" id="eWV-cV-QV6">
+                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 4" translatesAutoresizingMaskIntoConstraints="NO" id="eWV-cV-QV6">
                     <rect key="frame" x="0.0" y="309" width="414" height="19"/>
                 </imageView>
             </subviews>
