--- a/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/Controller/HYVIPViewController.xib
@@ -31,8 +31,10 @@
                 <outlet property="pageControl" destination="497-AQ-Mjs" id="yWU-YE-3gh"/>
                 <outlet property="prgsViewAmount" destination="Mh3-dw-OQt" id="E3W-nX-fzO"/>
                 <outlet property="prgsViewDeposit" destination="UAH-s3-R0T" id="f7h-Em-01d"/>
+                <outlet property="rankStackView" destination="4sR-4D-yS9" id="u9a-tU-Bbq"/>
                 <outlet property="sxhTopLb" destination="5cn-6c-4LY" id="VQO-el-ukp"/>
                 <outlet property="topRadianView" destination="H4B-ad-6eD" id="EyN-kB-86z"/>
+                <outlet property="unloginLbBGView" destination="BOP-7r-0AT" id="vJn-PY-jCA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -44,6 +46,9 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMA-BO-i4h">
                     <rect key="frame" x="0.0" y="310" width="414" height="586"/>
                     <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 4" translatesAutoresizingMaskIntoConstraints="NO" id="eWV-cV-QV6">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="19"/>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="大奖公告：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I0q-dW-eM5">
                             <rect key="frame" x="22" y="40" width="61.5" height="20"/>
                             <constraints>
@@ -81,7 +86,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2dZ-SF-rUk">
                             <rect key="frame" x="22" y="110" width="370" height="175"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本月流水: 120,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J80-p6-w6w">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="751" text="本月流水: 120,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J80-p6-w6w">
                                     <rect key="frame" x="20" y="20" width="103.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                     <color key="textColor" red="1" green="0.98431372549019602" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
@@ -127,7 +132,7 @@
                                         <constraint firstAttribute="height" constant="4" id="Og3-Gd-o0e"/>
                                     </constraints>
                                 </progressView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="累计身份" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOB-rL-H0k">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="751" text="累计身份" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOB-rL-H0k">
                                     <rect key="frame" x="20" y="103" width="49.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -346,6 +351,24 @@
                                         <constraint firstItem="RqZ-lc-7td" firstAttribute="height" secondItem="4sR-4D-yS9" secondAttribute="height" id="Zfc-ra-J3e"/>
                                     </constraints>
                                 </stackView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOP-7r-0AT">
+                                    <rect key="frame" x="8" y="117.5" width="354" height="57.5"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="尊敬的币游会员，请先登录获取您的数据哦~" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e55-Az-dbC">
+                                            <rect key="frame" x="0.0" y="0.0" width="354" height="57.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" white="1" alpha="0.75265957446808507" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="e55-Az-dbC" firstAttribute="top" secondItem="BOP-7r-0AT" secondAttribute="top" id="3mC-or-hq8"/>
+                                        <constraint firstItem="e55-Az-dbC" firstAttribute="leading" secondItem="BOP-7r-0AT" secondAttribute="leading" id="8QX-VU-MwG"/>
+                                        <constraint firstAttribute="trailing" secondItem="e55-Az-dbC" secondAttribute="trailing" id="yvb-uL-fTk"/>
+                                        <constraint firstAttribute="bottom" secondItem="e55-Az-dbC" secondAttribute="bottom" id="zc2-d0-ke8"/>
+                                    </constraints>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="214,000usdt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfV-5u-9we">
                                     <rect key="frame" x="276.5" y="59" width="73.5" height="14.5"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
@@ -357,9 +380,12 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="zGD-ma-8P7" secondAttribute="trailing" constant="20" id="0ai-XL-Qif"/>
                                 <constraint firstItem="gfV-5u-9we" firstAttribute="trailing" secondItem="pCf-CL-JCp" secondAttribute="trailing" id="27E-VI-LEL"/>
+                                <constraint firstItem="BOP-7r-0AT" firstAttribute="leading" secondItem="4sR-4D-yS9" secondAttribute="leading" id="2WV-Fs-oav"/>
                                 <constraint firstItem="zGD-ma-8P7" firstAttribute="leading" secondItem="2dZ-SF-rUk" secondAttribute="leading" constant="20" id="3qh-Vp-qrs"/>
+                                <constraint firstItem="BOP-7r-0AT" firstAttribute="bottom" secondItem="4sR-4D-yS9" secondAttribute="bottom" id="4Gn-qV-StP"/>
                                 <constraint firstItem="zGD-ma-8P7" firstAttribute="top" secondItem="J80-p6-w6w" secondAttribute="bottom" constant="7" id="5go-xU-9kr"/>
                                 <constraint firstItem="J80-p6-w6w" firstAttribute="top" secondItem="2dZ-SF-rUk" secondAttribute="top" constant="20" id="6uL-Mh-yCH"/>
+                                <constraint firstItem="BOP-7r-0AT" firstAttribute="trailing" secondItem="4sR-4D-yS9" secondAttribute="trailing" id="8Ev-a2-E6f"/>
                                 <constraint firstAttribute="trailing" secondItem="UAH-s3-R0T" secondAttribute="trailing" constant="20" id="8no-7w-GAk"/>
                                 <constraint firstItem="4sR-4D-yS9" firstAttribute="leading" secondItem="2dZ-SF-rUk" secondAttribute="leading" constant="8" id="CdS-2z-s5T"/>
                                 <constraint firstItem="J80-p6-w6w" firstAttribute="leading" secondItem="2dZ-SF-rUk" secondAttribute="leading" constant="20" id="D0M-bq-NZT"/>
@@ -384,6 +410,7 @@
                                 <constraint firstItem="U5U-Iu-Rhg" firstAttribute="top" secondItem="Mh3-dw-OQt" secondAttribute="bottom" constant="15" id="ywF-KV-MJO"/>
                                 <constraint firstItem="Mh3-dw-OQt" firstAttribute="leading" secondItem="2dZ-SF-rUk" secondAttribute="leading" constant="20" id="zOo-2m-bXh"/>
                                 <constraint firstItem="Mh3-dw-OQt" firstAttribute="top" secondItem="J80-p6-w6w" secondAttribute="bottom" constant="5.5" id="zV2-XU-PdG"/>
+                                <constraint firstItem="BOP-7r-0AT" firstAttribute="top" secondItem="4sR-4D-yS9" secondAttribute="top" id="ziS-eR-H4N"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eym-Sh-0bT">
@@ -479,11 +506,14 @@
                         <constraint firstAttribute="trailing" secondItem="QtP-6Z-Za5" secondAttribute="trailing" constant="22" id="BzQ-97-zbR"/>
                         <constraint firstItem="2dZ-SF-rUk" firstAttribute="trailing" secondItem="QtP-6Z-Za5" secondAttribute="trailing" id="MZk-Eh-qgo"/>
                         <constraint firstItem="zBF-yF-ycI" firstAttribute="height" secondItem="eym-Sh-0bT" secondAttribute="height" id="NVG-OT-5ZS"/>
+                        <constraint firstItem="eWV-cV-QV6" firstAttribute="top" secondItem="KMA-BO-i4h" secondAttribute="top" id="OHL-x7-6tg"/>
                         <constraint firstItem="zBF-yF-ycI" firstAttribute="top" secondItem="eym-Sh-0bT" secondAttribute="top" id="S1g-aF-reF"/>
                         <constraint firstAttribute="trailing" secondItem="zBF-yF-ycI" secondAttribute="trailing" constant="22" id="S2Q-UW-0BA"/>
                         <constraint firstItem="eym-Sh-0bT" firstAttribute="leading" secondItem="KMA-BO-i4h" secondAttribute="leading" constant="22" id="TgZ-C0-DiI"/>
+                        <constraint firstAttribute="trailing" secondItem="eWV-cV-QV6" secondAttribute="trailing" id="Ujp-fZ-58f"/>
                         <constraint firstItem="eym-Sh-0bT" firstAttribute="top" secondItem="2dZ-SF-rUk" secondAttribute="bottom" constant="9" id="X97-dv-eLV"/>
                         <constraint firstItem="zBF-yF-ycI" firstAttribute="width" secondItem="eym-Sh-0bT" secondAttribute="width" id="XqJ-N3-Fxo"/>
+                        <constraint firstItem="eWV-cV-QV6" firstAttribute="leading" secondItem="KMA-BO-i4h" secondAttribute="leading" id="YcC-UP-Nfy"/>
                         <constraint firstItem="I0q-dW-eM5" firstAttribute="top" secondItem="KMA-BO-i4h" secondAttribute="top" constant="40" id="cVP-Wu-P4w"/>
                         <constraint firstItem="I0q-dW-eM5" firstAttribute="leading" secondItem="KMA-BO-i4h" secondAttribute="leading" constant="22" id="fGv-pI-h0j"/>
                         <constraint firstItem="QtP-6Z-Za5" firstAttribute="top" secondItem="I0q-dW-eM5" secondAttribute="bottom" constant="10" id="gom-6h-VzT"/>
@@ -514,15 +544,15 @@
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uTa-yB-Zub">
-                            <rect key="frame" x="330" y="239" width="0.5" height="11"/>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.1952054794520548" colorSpace="calibratedRGB"/>
+                            <rect key="frame" x="329.5" y="239" width="0.5" height="11"/>
+                            <color key="backgroundColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="0.5" id="Rnj-2u-RLI"/>
                                 <constraint firstAttribute="height" constant="11" id="hNY-NY-7qJ"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="会员权益: 入会礼金9,888usdt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TpE-DX-g5Z">
-                            <rect key="frame" x="160" y="237" width="165.5" height="14.5"/>
+                            <rect key="frame" x="159" y="237" width="165.5" height="14.5"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -532,9 +562,9 @@
                     <constraints>
                         <constraint firstItem="497-AQ-Mjs" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="3qm-FX-emn"/>
                         <constraint firstAttribute="width" secondItem="H4B-ad-6eD" secondAttribute="height" multiplier="375:252" id="Df5-nk-fAe"/>
-                        <constraint firstItem="uTa-yB-Zub" firstAttribute="leading" secondItem="TpE-DX-g5Z" secondAttribute="trailing" constant="4.5" id="DuG-Ln-vFC"/>
+                        <constraint firstItem="uTa-yB-Zub" firstAttribute="leading" secondItem="TpE-DX-g5Z" secondAttribute="trailing" constant="5" id="DuG-Ln-vFC"/>
                         <constraint firstItem="uTa-yB-Zub" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="EBa-hB-5XS"/>
-                        <constraint firstItem="yca-Ns-xyA" firstAttribute="leading" secondItem="uTa-yB-Zub" secondAttribute="trailing" constant="4.5" id="RDr-DC-x0K"/>
+                        <constraint firstItem="yca-Ns-xyA" firstAttribute="leading" secondItem="uTa-yB-Zub" secondAttribute="trailing" constant="5" id="RDr-DC-x0K"/>
                         <constraint firstItem="497-AQ-Mjs" firstAttribute="leading" secondItem="H4B-ad-6eD" secondAttribute="leading" constant="22" id="VG6-DV-reC"/>
                         <constraint firstAttribute="trailing" secondItem="yca-Ns-xyA" secondAttribute="trailing" constant="22" id="YCx-ql-RJQ"/>
                         <constraint firstItem="TpE-DX-g5Z" firstAttribute="centerY" secondItem="yca-Ns-xyA" secondAttribute="centerY" id="dbk-r8-16l"/>
@@ -563,8 +593,8 @@
                         <constraint firstAttribute="width" secondItem="GEL-g5-FzK" secondAttribute="height" multiplier="375:23" id="rRp-05-Z9n"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIP私享会2.0  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cn-6c-4LY">
-                    <rect key="frame" x="22.5" y="77" width="93.5" height="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VIP私享会2.0&gt;  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cn-6c-4LY">
+                    <rect key="frame" x="22.5" y="77" width="103" height="17"/>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -582,20 +612,14 @@
                         <action selector="didTapDashenBoard:" destination="-1" eventType="touchUpInside" id="0Sd-Ic-Rc9"/>
                     </connections>
                 </button>
-                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 4" translatesAutoresizingMaskIntoConstraints="NO" id="eWV-cV-QV6">
-                    <rect key="frame" x="0.0" y="309" width="414" height="19"/>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="yca-Ns-xyA" firstAttribute="top" secondItem="g2w-Lu-VqX" secondAttribute="bottom" constant="13" id="2sC-0T-jnc"/>
                 <constraint firstItem="H4B-ad-6eD" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="5RZ-Ns-6jf"/>
-                <constraint firstItem="eWV-cV-QV6" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="81v-D2-ECt"/>
-                <constraint firstItem="eWV-cV-QV6" firstAttribute="bottom" secondItem="H4B-ad-6eD" secondAttribute="bottom" constant="6" id="8Hx-u9-MRV"/>
                 <constraint firstItem="KMA-BO-i4h" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="9yL-UH-sTG"/>
                 <constraint firstItem="5cn-6c-4LY" firstAttribute="top" secondItem="GEL-g5-FzK" secondAttribute="bottom" constant="7.7000000000000002" id="Fz3-Bh-bha"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="KMA-BO-i4h" secondAttribute="trailing" id="HuG-VS-jEe"/>
-                <constraint firstItem="eWV-cV-QV6" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="IxE-rm-b0J"/>
                 <constraint firstItem="GEL-g5-FzK" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="LMK-Si-Q9T"/>
                 <constraint firstItem="H4B-ad-6eD" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="SfD-ga-R0u"/>
                 <constraint firstItem="KMA-BO-i4h" firstAttribute="top" secondItem="H4B-ad-6eD" secondAttribute="bottom" constant="-12" id="Tmd-b3-xUT"/>
