--- a/HYNewNest/Features(主代码)/HomeComponent/View/CNMessageBoxView.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/View/CNMessageBoxView.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jnG-qK-2Na">
-                    <rect key="frame" x="0.0" y="218.5" width="414" height="459"/>
+                    <rect key="frame" x="0.0" y="178.5" width="414" height="459"/>
                     <subviews>
                         <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdn-XT-46o">
                             <rect key="frame" x="16" y="0.0" width="382" height="459"/>
@@ -36,12 +36,12 @@
                     </constraints>
                 </view>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="MfP-76-EA1">
-                    <rect key="frame" x="187.5" y="677.5" width="39" height="37"/>
+                    <rect key="frame" x="187.5" y="637.5" width="39" height="37"/>
                     <color key="pageIndicatorTintColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="currentPageIndicatorTintColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
                 </pageControl>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NBY-xf-oIa">
-                    <rect key="frame" x="191.5" y="692.5" width="31" height="30"/>
+                    <rect key="frame" x="191.5" y="652.5" width="31" height="30"/>
                     <state key="normal" image="circleClose"/>
                     <connections>
                         <action selector="close:" destination="-1" eventType="touchUpInside" id="Nnn-KX-pmN"/>
@@ -52,7 +52,7 @@
             <constraints>
                 <constraint firstItem="MfP-76-EA1" firstAttribute="top" secondItem="jnG-qK-2Na" secondAttribute="bottom" id="C7R-qF-9Uf"/>
                 <constraint firstItem="jnG-qK-2Na" firstAttribute="leading" secondItem="0bx-rG-ZxG" secondAttribute="leading" id="ENC-mW-mkv"/>
-                <constraint firstItem="jnG-qK-2Na" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Jer-ve-VFR"/>
+                <constraint firstItem="jnG-qK-2Na" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-40" id="Jer-ve-VFR"/>
                 <constraint firstItem="MfP-76-EA1" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="edP-Ez-w0y"/>
                 <constraint firstItem="NBY-xf-oIa" firstAttribute="top" secondItem="jnG-qK-2Na" secondAttribute="bottom" constant="15" id="kRb-81-ugd"/>
                 <constraint firstItem="0bx-rG-ZxG" firstAttribute="trailing" secondItem="jnG-qK-2Na" secondAttribute="trailing" id="q9M-jF-eCO"/>
