--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
@@ -807,7 +807,7 @@
                                                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                             </userDefinedRuntimeAttributes>
                                         </button>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CLs-5Q-0PD">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="CLs-5Q-0PD">
                                             <rect key="frame" x="15" y="15" width="81.333333333333329" height="81"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="CLs-5Q-0PD" secondAttribute="height" multiplier="1:1" id="D15-DX-DQN"/>
@@ -938,6 +938,7 @@
         </view>
     </objects>
     <resources>
+        <image name="2" width="114" height="106"/>
         <image name="aq" width="24" height="24"/>
         <image name="cz" width="40" height="40"/>
         <image name="g" width="22" height="22"/>
